Fix whitespace issue

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -230,6 +230,7 @@ table caption {
 table th,
 table td {
   border: solid thin;
+  whitespace: normal;
 }
 
 table td:first-child {
